--- a/src/app/pages/components/entity-view-tag/entity-view-tag.component.scss
+++ b/src/app/pages/components/entity-view-tag/entity-view-tag.component.scss
@@ -19,6 +19,12 @@
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
 
+.title {
+  padding: 20px 25px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.14);
+  color: #5B9BE1;
+}
+
 md-icon {
   cursor: pointer;
   color: rgba(0,0,0,0.6)
@@ -27,4 +33,5 @@ md-icon {
 table-advanced {
   display: inline-block;
   width: 526px;
+  padding: 25px 20px;
 }
