--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,19 @@ body {
   margin: 0 !important;
 
   -webkit-font-smoothing: antialiased;
+
+  ::-webkit-scrollbar {
+    width: 0.4em;
+  }
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #4A90E2;
+    outline: 1px solid #4A90E2;
+  }
 }
 
 p.box {
