--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -262,3 +262,11 @@ dropdown-component {
   }
 }
 
+.schedule-checkbox {
+  .md-checkbox-inner-container {
+    height: 16px;
+    width: 16px;
+    color: #8E8E8E;
+  }
+}
+
