--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.html
@@ -8,17 +8,17 @@
     <div *ngFor="let ps of productSchedules">
 
       <div class="item item--schedule" [class.item--selected]="ps.detailedListSelected">
-        <md-checkbox class="checkbox-blue schedule-checkbox" [(ngModel)]="ps.detailedListSelected" (change)="productScheduleCheckboxToggle($event, ps)"></md-checkbox>
-        <div class="text">{{ps.name}}</div>
+        <md-checkbox class="checkbox-blue schedule-checkbox"></md-checkbox>
+        <div class="text" (click)="productScheduleCheckboxToggle(!ps.detailedListSelected, ps)">{{ps.name}}</div>
         <md-icon (click)="scheduleCollapseToggle(ps)" [class.rotated]="ps.detailedListOpened">keyboard_arrow_down</md-icon>
       </div>
 
       <div [style.height]="ps.schedules.length * 46 + 'px'" class="products-list" [class.products-list--hidden]="!ps.detailedListOpened">
         <div class="item item--product" *ngFor="let schedule of ps.schedules" [class.item--selected]="schedule.detailedListSelected">
-          <md-checkbox class="checkbox-blue schedule-checkbox" [(ngModel)]="schedule.detailedListSelected" (change)="scheduleCheckboxToggle($event, schedule)"></md-checkbox>
+          <md-checkbox class="checkbox-blue schedule-checkbox"></md-checkbox>
           <div *ngIf="schedule.product.getDefaultImagePath(); else defaultimage" class="image" [style.background-image]="'url(' + schedule.product.getDefaultImagePath() + ')'"></div>
           <ng-template #defaultimage><div class="image image--default"></div></ng-template>
-          <div class="text">{{schedule.product.name}}</div>
+          <div (click)="scheduleCheckboxToggle(!schedule.detailedListSelected, schedule)" class="text">{{schedule.product.name}}</div>
         </div>
       </div>
     </div>
