--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
@@ -4,9 +4,10 @@
   background: white;
   font-size: 13px;
   min-height: calc(100vh - 394px);
+  border-right: 1px solid rgba(0,0,0,0.2);
 
   .header {
-    height: 40px;
+    height: 46px;
   }
 
   .item {
@@ -34,6 +35,7 @@
         overflow: hidden;
         width: 160px;
         white-space: nowrap;
+        cursor: pointer;
       }
 
       md-icon {
@@ -59,6 +61,7 @@
         overflow: hidden;
         width: 138px;
         white-space: nowrap;
+        cursor: pointer;
       }
 
       .image {
