--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.html
@@ -1,4 +1,4 @@
-<div class="list__container">
+<div class="list__container" [class.list__container--hidden]="!sideVisible">
   <div class="list__header"></div>
 
   <div class="list__content">
@@ -8,17 +8,15 @@
     <div *ngFor="let ps of productSchedules">
 
       <div class="item item--schedule" [class.item--selected]="ps.detailedListSelected">
-        <md-checkbox class="checkbox-blue schedule-checkbox"></md-checkbox>
-        <div class="text" (click)="productScheduleCheckboxToggle(!ps.detailedListSelected, ps)">{{ps.name}}</div>
-        <md-icon (click)="scheduleCollapseToggle(ps)" [class.rotated]="ps.detailedListOpened">keyboard_arrow_down</md-icon>
+        <div class="text" (click)="productScheduleToggle(!ps.detailedListSelected, ps)">{{ps.name}}</div>
+        <md-icon [class.arrow--hidden]="!sideVisible" (click)="scheduleCollapseToggle(ps)" [class.rotated]="ps.detailedListOpened">keyboard_arrow_down</md-icon>
       </div>
 
       <div [style.height]="ps.schedules.length * 46 + 'px'" class="products-list" [class.products-list--hidden]="!ps.detailedListOpened">
         <div class="item item--product" *ngFor="let schedule of ps.schedules" [class.item--selected]="schedule.detailedListSelected">
-          <md-checkbox class="checkbox-blue schedule-checkbox"></md-checkbox>
           <div *ngIf="schedule.product.getDefaultImagePath(); else defaultimage" class="image" [style.background-image]="'url(' + schedule.product.getDefaultImagePath() + ')'"></div>
           <ng-template #defaultimage><div class="image image--default"></div></ng-template>
-          <div (click)="scheduleCheckboxToggle(!schedule.detailedListSelected, schedule)" class="text">{{schedule.product.name}}</div>
+          <div (click)="scheduleToggle(!schedule.detailedListSelected, schedule)" class="text">{{schedule.product.name}}</div>
         </div>
       </div>
     </div>
