--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
@@ -1,13 +1,23 @@
 .list__container {
   display: inline-block;
-  width: 240px;
+  width: 230px;
   background: white;
   font-size: 13px;
   min-height: calc(100vh - 394px);
   border-right: 1px solid rgba(0,0,0,0.2);
+  transition: 0.25s ease-in-out;
+
+  &--hidden {
+    width: 0;
+    transition: 0.25s ease-in-out;
+  }
 
   .header {
     height: 46px;
+  }
+
+  .arrow--hidden {
+    display: none;
   }
 
   .item {
