--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -1,22 +1,57 @@
-.timeline-container{
-  overflow: hidden;
-  overflow-x: auto;
+.top-line {
+  position: relative;
+  height: 26px;
+  line-height: 26px;
+  width: 100%;
+  background: white;
+  font-size: 12px;
+  font-weight: 500;
+  color: #4a4a4a;
+  padding-left: 5px;
+}
+
+.view-container {
+  min-width: 100%;
+  height: 1px;
+  width: 1px;
+  overflow: auto;
+  min-height: calc(100vh - 420px);
+}
+
+.timeline-container {
+  position: relative;
   height: 100%;
+  overflow: hidden;
+  background-position-y: 21px;
   background-size: 65px 46px;
   background-image: linear-gradient(to right, white 1px, transparent 1px), linear-gradient(to bottom, white 1px, transparent 1px);
 
+  .date-placeholder {
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    height: 100%;
+    transition: left 0.6s cubic-bezier(0.35, 0, 0.25, 1);
+
+    &__line {
+      width: 2px;
+      background: #5383C3;
+      height: 100%;
+    }
+  }
+
   .timeline-header {
     position: relative;
-    height: 46px;
+    height: 20px;
 
     div {
       position: absolute;
       display: inline-block;
       width: 65px;
-      background: white;
-      height: 46px;
-      line-height: 46px;
-      font-size: 12px;
+      background: #F3F3F3;
+      height: 20px;
+      line-height: 20px;
+      font-size: 10px;
       color: rgba(0,0,0,0.45);
       border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     }
@@ -28,7 +63,14 @@
     display: flex;
     width: 100%;
     height: 46px;
-    transition: all 0.6s cubic-bezier(0.35, 0, 0.25, 1);
+    transition: height 0.6s cubic-bezier(0.35, 0, 0.25, 1);
+  }
+
+  .item-selected {
+    .bar {
+      border: 3px solid #24F5FE;
+      margin: -3px;
+    }
   }
 
   .schedule-container {
@@ -36,21 +78,27 @@
     height: 46px;
   }
 
+
   .cycle-container {
     position: absolute;
     height: 46px;
-    padding: 8px 3px;
+    padding: 6px 3px;
     box-sizing: border-box;
-    transition: all 500ms ease-in-out;
+    transition: width 500ms ease-in-out, height 500ms ease-in-out, left 500ms ease-in-out;
 
     .tail {
       border-radius: 5px 5px 0 0;
-      transition: all 0.6s cubic-bezier(0.35, 0, 0.25, 1);
+      transition: height 0.6s cubic-bezier(0.35, 0, 0.25, 1);
     }
 
     .bar {
-      border-radius: 3px;
-      height: 30px;
+      color: white;
+      font-size: 11px;
+      font-weight: 500;
+      border-radius: 4px;
+      height: 34px;
+      line-height: 34px;
+      padding-left: 8px;
       cursor: pointer;
     }
   }
