--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
@@ -101,3 +101,15 @@
     }
   }
 }
+
+.new-product-schedule {
+  display: flex;
+  margin-top: 10px;
+  align-items: center;
+  padding: 0 12px;
+
+  md-icon {
+    cursor: pointer;
+    margin-left: auto;
+  }
+}
