--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -23,8 +23,8 @@
   height: 100%;
   overflow: hidden;
   background-position-y: 21px;
-  background-size: 65px 46px;
   background-image: linear-gradient(to right, white 1px, transparent 1px), linear-gradient(to bottom, white 1px, transparent 1px);
+  transition: background-size 500ms ease-in-out;
 
   .date-placeholder {
     position: absolute;
@@ -86,12 +86,17 @@
     box-sizing: border-box;
     transition: width 500ms ease-in-out, height 500ms ease-in-out, left 500ms ease-in-out;
 
+    &--slow {
+      transition: width 50ms ease-in-out, height 500ms ease-in-out, left 50ms ease-in-out;
+    }
+
     .tail {
       border-radius: 5px 5px 0 0;
       transition: height 0.6s cubic-bezier(0.35, 0, 0.25, 1);
     }
 
     .bar {
+      display: flex;
       color: white;
       font-size: 11px;
       font-weight: 500;
@@ -100,6 +105,15 @@
       line-height: 34px;
       padding-left: 8px;
       cursor: pointer;
+    }
+
+    .body {
+      width: 100%;
+    }
+
+    .resizer {
+      width: 6px;
+      cursor: col-resize;
     }
   }
 }
