--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
@@ -13,7 +13,15 @@
   }
 
   .header {
+    display: flex;
+    align-items: center;
+    padding: 0 10px 0 15px;
     height: 46px;
+
+    md-icon {
+      margin-left: auto;
+      cursor: pointer;
+    }
   }
 
   .arrow--hidden {
