--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -16,6 +16,7 @@
   width: 1px;
   overflow: auto;
   min-height: calc(100vh - 420px);
+  transition: height 0.6s cubic-bezier(0.35, 0, 0.25, 1);
 }
 
 .timeline-container {
